// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard should render properly 1`] = `
.c19 {
  overflow: visible;
  font-size: 2rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c19 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 700;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
  display: inline-block;
}

.c9 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c8 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 0.8rem 2.4rem 1rem;
  border-radius: 0.8rem;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8,
.c8 .c1,
.c8 .c18,
.c8 .c18 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c8:hover {
  cursor: pointer;
}

.c8:focus {
  outline: none;
}

.c8:disabled {
  cursor: not-allowed;
}

.c8::after {
  content: '';
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: transparent;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.8rem;
  border-style: solid;
}

.c8:disabled {
  color: #98A7B7;
  background-color: transparent;
}

.c8:disabled::after {
  border-width: 0.1rem;
  border-color: #98A7B7;
}

.c8:disabled .c18 * {
  fill: #98A7B7;
}

.c8:not(:disabled):not(:hover) {
  color: #3872D2;
  background-color: transparent;
}

.c8:not(:disabled):not(:hover)::after {
  border-width: 0.1rem;
  border-color: #3872D2;
}

.c8:not(:disabled):not(:hover) .c18 * {
  fill: #3872D2;
}

.c8:not(:disabled):active {
  color: #275093;
  background-color: #EBF1FA;
}

.c8:not(:disabled):active::after {
  border-width: 0.2rem;
  border-color: #275093;
}

.c8:not(:disabled):active .c18 * {
  fill: #275093;
}

.c8:not(:disabled):not(:active):hover {
  color: #3061B3;
  background-color: transparent;
  box-shadow: 0 0.2rem 0.8rem rgba(48,97,179,0.35);
}

.c8:not(:disabled):not(:active):hover::after {
  border-width: 0.2rem;
  border-color: #3061B3;
}

.c8:not(:disabled):not(:active):hover .c18 * {
  fill: #3061B3;
}

.c8 .c18 + .c1 {
  margin-left: 0.8rem;
}

.c8 .c1 + .c18 {
  margin-left: 0.8rem;
}

.c17 {
  top: 50%;
  left: 0;
  cursor: text;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: absolute;
  pointer-events: none;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  opacity: 1;
  z-index: 1;
  width: 100%;
  max-width: -webkit-min-content;
  max-width: -moz-min-content;
  max-width: min-content;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c21 {
  pointer-events: none;
  margin-left: 1.2rem;
}

.c13 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 4rem;
  padding: 0 1.2rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem;
  background-color: #ffffff;
}

.c13 .c16 {
  color: #607890;
}

.c13 ~ .avlt8d-0 {
  color: #546A7F;
}

.c13 input {
  box-shadow: 0 0 0 100000px #ffffff inset;
}

.c13::after {
  content: '';
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  pointer-events: none;
  background-color: transparent;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.4rem;
  border-width: 0.4rem;
  border: 0.1rem solid #98A7B7;
}

.c13:hover {
  box-shadow: 0px 0.2rem 0.8rem rgba(96,120,144,0.2);
}

.c13:focus-within {
  border-radius: 0.4rem;
  box-shadow: 0 0.2rem 0.8rem rgba(56,114,210,0.2);
}

.c13:hover::after {
  border-color: #607890;
  border-width: 0.15rem;
}

.c13:focus-within::after {
  border-color: #3872D2;
  border-radius: 0.4rem;
  border-width: 0.15rem;
}

.c13:focus-within,
.c13:focus-within:hover {
  background-color: #ffffff;
}

.c13:focus-within::after,
.c13:focus-within:hover::after {
  border-color: #3872D2;
  border-radius: 0.4rem;
}

.c13:focus-within .c16,
.c13:focus-within:hover .c16 {
  color: #3872D2;
}

.c13:focus-within input,
.c13:focus-within:hover input {
  box-shadow: 0 0 0 100000px #ffffff inset;
}

.c13:focus-within input::-webkit-input-placeholder,
.c13:focus-within:hover input::-webkit-input-placeholder {
  color: #C7D0D8;
}

.c13:focus-within input::-moz-placeholder,
.c13:focus-within:hover input::-moz-placeholder {
  color: #C7D0D8;
}

.c13:focus-within input:-ms-input-placeholder,
.c13:focus-within:hover input:-ms-input-placeholder {
  color: #C7D0D8;
}

.c13:focus-within input::placeholder,
.c13:focus-within:hover input::placeholder {
  color: #C7D0D8;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c12 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c15 {
  color: #13181D;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: transparent;
  border: none;
  text-overflow: ellipsis;
  resize: none;
  z-index: 1;
}

.c15.c15.c15:focus {
  outline: none;
  box-shadow: unset;
}

.c15.c15.c15:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c15.c15.c15:focus::-moz-placeholder {
  opacity: 1;
}

.c15.c15.c15:focus:-ms-input-placeholder {
  opacity: 1;
}

.c15.c15.c15:focus::placeholder {
  opacity: 1;
}

.c15:disabled {
  color: #435465;
}

.c15::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c15::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c15:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c15::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c15:not(:placeholder-shown) ~ .c16,
.c15:focus ~ .c16 {
  opacity: 0;
}

.c10 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 20rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c10 .c11 {
  margin: 0;
  caret-color: transparent;
}

.c10 .c11 label {
  pointer-events: none;
}

.c10 .c11 div,
.c10 .c11 input,
.c10 .c11 label {
  cursor: pointer;
}

.c10 .c11 .c20 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c10 .c11:not(:focus-within):hover .c20 * {
  fill: #13181D;
}

.c5 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c3 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c3 .c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  overflow: hidden;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}

.c6.c6.c6 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6:focus-within {
  border-color: #012040;
}

.c6 > * {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  padding: 0.8rem;
  color: #435465;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: inherit;
  background-color: #ffffff;
}

.c7::-webkit-input-placeholder {
  color: #98A7B7;
}

.c7::-moz-placeholder {
  color: #98A7B7;
}

.c7:-ms-input-placeholder {
  color: #98A7B7;
}

.c7::placeholder {
  color: #98A7B7;
}

.c7::-webkit-file-upload-button {
  visibility: hidden;
}

.c0 {
  background-color: #eff2f4;
  overflow: auto;
  padding-top: 32px;
}

@media (max-width:1279px) {
  .c0 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding-left: calc(24px + (((100vw - 1280px) / 160) * 16));
    padding-right: calc(24px + (((100vw - 1280px) / 160) * 16));
  }
}

@media (min-width:1440px) {
  .c0 {
    padding-left: 40px;
    padding-right: 40px;
  }
}

<div>
  <main
    class="c0"
  >
    <strong
      class="c1 c2"
    >
      Add Movie
    </strong>
    <form
      class="form-inline"
    >
      <div
        class="c3"
        id="title-field"
      >
        
        <div
          class="c4 c5 c6"
        >
          <input
            class="c7"
            id="title"
            name="title"
            placeholder="Title"
            required=""
            type="text"
          />
        </div>
        
      </div>
      <div
        class="c3"
        id="duration-field"
      >
        
        <div
          class="c4 c5 c6"
        >
          <input
            class="c7"
            id="duration"
            name="duration"
            placeholder="Duration"
            type="number"
          />
        </div>
        
      </div>
      <button
        class="c8"
        data-testid="newtest"
        type="submit"
      >
        <span
          class="c1 c9"
        >
          Add Movie
        </span>
      </button>
    </form>
    <strong
      class="c1 c2"
    >
      Movies List
    </strong>
    <table
      class="table"
    >
      <thead
        class="thead-light"
      >
        <tr>
          <th
            scope="col"
          >
            Sr. No.
          </th>
          <th
            scope="col"
          >
            Id
          </th>
          <th
            scope="col"
          >
            Title
          </th>
          <th
            scope="col"
          >
            Duration
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
    <strong
      class="c1 c2"
    >
      Show List
    </strong>
    <form
      class="form-inline"
    >
      <div
        class="c3"
        id="date-field"
      >
        
        <div
          class="c4 c5 c6"
        >
          <input
            class="c7"
            id="date"
            name="startTime"
            placeholder="Date"
            required=""
            type="datetime-local"
          />
        </div>
        
      </div>
      <div
        class="c10"
        id="movie-wrapper"
      >
        <div
          class="c11 c12"
          id="movie-input-wrapper"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <input
                aria-describedby="movie-helper-text"
                autocomplete="off"
                class="c15"
                id="movie-input"
                placeholder="Select Movie"
                readonly=""
                type="text"
                value="Select"
              />
              <label
                class="c16 c17"
                for="movie-input"
              />
            </div>
            <svg
              class="c18 c19 c20 c21"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </div>
          
        </div>
      </div>
      <div
        class="c10"
        id="movie-wrapper"
      >
        <div
          class="c11 c12"
          id="movie-input-wrapper"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <input
                aria-describedby="movie-helper-text"
                autocomplete="off"
                class="c15"
                id="movie-input"
                placeholder="Select Language"
                readonly=""
                type="text"
                value="Select"
              />
              <label
                class="c16 c17"
                for="movie-input"
              />
            </div>
            <svg
              class="c18 c19 c20 c21"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </div>
          
        </div>
      </div>
      <div
        class="c10"
        id="movie-wrapper"
      >
        <div
          class="c11 c12"
          id="movie-input-wrapper"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <input
                aria-describedby="movie-helper-text"
                autocomplete="off"
                class="c15"
                id="movie-input"
                placeholder="Select Type"
                readonly=""
                type="text"
                value="Select"
              />
              <label
                class="c16 c17"
                for="movie-input"
              />
            </div>
            <svg
              class="c18 c19 c20 c21"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </div>
          
        </div>
      </div>
      <div
        class="c3"
        id="price-field"
      >
        
        <div
          class="c4 c5 c6"
        >
          <input
            class="c7"
            id="price"
            name="price"
            placeholder="Enter Price"
            required=""
            type="number"
          />
        </div>
        
      </div>
      <button
        class="c8"
        type="submit"
      >
        <span
          class="c1 c9"
        >
          Add Show
        </span>
      </button>
    </form>
    <table
      class="table"
    >
      <thead
        class="thead-light"
      >
        <tr>
          <th
            scope="col"
          >
            Sr.No
          </th>
          <th
            scope="col"
          >
            Start time
          </th>
          <th
            scope="col"
          >
            Movie
          </th>
          <th
            scope="col"
          >
            Movie Language
          </th>
          <th
            scope="col"
          >
            Movie Type
          </th>
          <th
            scope="col"
          >
            Price
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </main>
</div>
`;

exports[`Dashboard should show loading if isLoading Prop is true 1`] = `
.c21 {
  overflow: visible;
  font-size: 2rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c21 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 700;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
  display: inline-block;
}

.c11 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  font-size: 56px;
}

.c2 * {
  fill: #3872D2;
}

.c10 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 0.8rem 2.4rem 1rem;
  border-radius: 0.8rem;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10,
.c10 .c3,
.c10 .c20,
.c10 .c20 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c10:hover {
  cursor: pointer;
}

.c10:focus {
  outline: none;
}

.c10:disabled {
  cursor: not-allowed;
}

.c10::after {
  content: '';
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: transparent;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.8rem;
  border-style: solid;
}

.c10:disabled {
  color: #98A7B7;
  background-color: transparent;
}

.c10:disabled::after {
  border-width: 0.1rem;
  border-color: #98A7B7;
}

.c10:disabled .c20 * {
  fill: #98A7B7;
}

.c10:not(:disabled):not(:hover) {
  color: #3872D2;
  background-color: transparent;
}

.c10:not(:disabled):not(:hover)::after {
  border-width: 0.1rem;
  border-color: #3872D2;
}

.c10:not(:disabled):not(:hover) .c20 * {
  fill: #3872D2;
}

.c10:not(:disabled):active {
  color: #275093;
  background-color: #EBF1FA;
}

.c10:not(:disabled):active::after {
  border-width: 0.2rem;
  border-color: #275093;
}

.c10:not(:disabled):active .c20 * {
  fill: #275093;
}

.c10:not(:disabled):not(:active):hover {
  color: #3061B3;
  background-color: transparent;
  box-shadow: 0 0.2rem 0.8rem rgba(48,97,179,0.35);
}

.c10:not(:disabled):not(:active):hover::after {
  border-width: 0.2rem;
  border-color: #3061B3;
}

.c10:not(:disabled):not(:active):hover .c20 * {
  fill: #3061B3;
}

.c10 .c20 + .c3 {
  margin-left: 0.8rem;
}

.c10 .c3 + .c20 {
  margin-left: 0.8rem;
}

.c19 {
  top: 50%;
  left: 0;
  cursor: text;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: absolute;
  pointer-events: none;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  opacity: 1;
  z-index: 1;
  width: 100%;
  max-width: -webkit-min-content;
  max-width: -moz-min-content;
  max-width: min-content;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c23 {
  pointer-events: none;
  margin-left: 1.2rem;
}

.c15 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 4rem;
  padding: 0 1.2rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem;
  background-color: #ffffff;
}

.c15 .c18 {
  color: #607890;
}

.c15 ~ .avlt8d-0 {
  color: #546A7F;
}

.c15 input {
  box-shadow: 0 0 0 100000px #ffffff inset;
}

.c15::after {
  content: '';
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  pointer-events: none;
  background-color: transparent;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.4rem;
  border-width: 0.4rem;
  border: 0.1rem solid #98A7B7;
}

.c15:hover {
  box-shadow: 0px 0.2rem 0.8rem rgba(96,120,144,0.2);
}

.c15:focus-within {
  border-radius: 0.4rem;
  box-shadow: 0 0.2rem 0.8rem rgba(56,114,210,0.2);
}

.c15:hover::after {
  border-color: #607890;
  border-width: 0.15rem;
}

.c15:focus-within::after {
  border-color: #3872D2;
  border-radius: 0.4rem;
  border-width: 0.15rem;
}

.c15:focus-within,
.c15:focus-within:hover {
  background-color: #ffffff;
}

.c15:focus-within::after,
.c15:focus-within:hover::after {
  border-color: #3872D2;
  border-radius: 0.4rem;
}

.c15:focus-within .c18,
.c15:focus-within:hover .c18 {
  color: #3872D2;
}

.c15:focus-within input,
.c15:focus-within:hover input {
  box-shadow: 0 0 0 100000px #ffffff inset;
}

.c15:focus-within input::-webkit-input-placeholder,
.c15:focus-within:hover input::-webkit-input-placeholder {
  color: #C7D0D8;
}

.c15:focus-within input::-moz-placeholder,
.c15:focus-within:hover input::-moz-placeholder {
  color: #C7D0D8;
}

.c15:focus-within input:-ms-input-placeholder,
.c15:focus-within:hover input:-ms-input-placeholder {
  color: #C7D0D8;
}

.c15:focus-within input::placeholder,
.c15:focus-within:hover input::placeholder {
  color: #C7D0D8;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c14 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c17 {
  color: #13181D;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: transparent;
  border: none;
  text-overflow: ellipsis;
  resize: none;
  z-index: 1;
}

.c17.c17.c17:focus {
  outline: none;
  box-shadow: unset;
}

.c17.c17.c17:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c17.c17.c17:focus::-moz-placeholder {
  opacity: 1;
}

.c17.c17.c17:focus:-ms-input-placeholder {
  opacity: 1;
}

.c17.c17.c17:focus::placeholder {
  opacity: 1;
}

.c17:disabled {
  color: #435465;
}

.c17::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c17::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c17:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c17::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c17:not(:placeholder-shown) ~ .c18,
.c17:focus ~ .c18 {
  opacity: 0;
}

.c12 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 20rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c12 .c13 {
  margin: 0;
  caret-color: transparent;
}

.c12 .c13 label {
  pointer-events: none;
}

.c12 .c13 div,
.c12 .c13 input,
.c12 .c13 label {
  cursor: pointer;
}

.c12 .c13 .c22 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c12 .c13:not(:focus-within):hover .c22 * {
  fill: #13181D;
}

.c7 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
}

.c5 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c5 .c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  overflow: hidden;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}

.c8.c8.c8 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8:focus-within {
  border-color: #012040;
}

.c8 > * {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  padding: 0.8rem;
  color: #435465;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: inherit;
  background-color: #ffffff;
}

.c9::-webkit-input-placeholder {
  color: #98A7B7;
}

.c9::-moz-placeholder {
  color: #98A7B7;
}

.c9:-ms-input-placeholder {
  color: #98A7B7;
}

.c9::placeholder {
  color: #98A7B7;
}

.c9::-webkit-file-upload-button {
  visibility: hidden;
}

.c0 {
  background-color: #eff2f4;
  overflow: auto;
  padding-top: 32px;
}

.c1 {
  position: fixed;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  background-color: rgba(255,255,255,0.7);
  z-index: 1;
}

@media (max-width:1279px) {
  .c0 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding-left: calc(24px + (((100vw - 1280px) / 160) * 16));
    padding-right: calc(24px + (((100vw - 1280px) / 160) * 16));
  }
}

@media (min-width:1440px) {
  .c0 {
    padding-left: 40px;
    padding-right: 40px;
  }
}

<div>
  <main
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2"
        height="1em"
        viewBox="0 0 100 100"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M82 35.7C74.1 18 53.4 10.1 35.7 18S10.1 46.6 18 64.3l7.6-3.4c-6-13.5 0-29.3 13.5-35.3s29.3 0 35.3 13.5l7.6-3.4z"
        >
          <animatetransform
            attributeName="transform"
            attributeType="XML"
            dur="2s"
            from="0 50 50"
            repeatCount="indefinite"
            to="360 50 50"
            type="rotate"
          />
        </path>
      </svg>
    </div>
    <strong
      class="c3 c4"
    >
      Add Movie
    </strong>
    <form
      class="form-inline"
    >
      <div
        class="c5"
        id="title-field"
      >
        
        <div
          class="c6 c7 c8"
        >
          <input
            class="c9"
            id="title"
            name="title"
            placeholder="Title"
            required=""
            type="text"
          />
        </div>
        
      </div>
      <div
        class="c5"
        id="duration-field"
      >
        
        <div
          class="c6 c7 c8"
        >
          <input
            class="c9"
            id="duration"
            name="duration"
            placeholder="Duration"
            type="number"
          />
        </div>
        
      </div>
      <button
        class="c10"
        data-testid="newtest"
        type="submit"
      >
        <span
          class="c3 c11"
        >
          Add Movie
        </span>
      </button>
    </form>
    <strong
      class="c3 c4"
    >
      Movies List
    </strong>
    <table
      class="table"
    >
      <thead
        class="thead-light"
      >
        <tr>
          <th
            scope="col"
          >
            Sr. No.
          </th>
          <th
            scope="col"
          >
            Id
          </th>
          <th
            scope="col"
          >
            Title
          </th>
          <th
            scope="col"
          >
            Duration
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
    <strong
      class="c3 c4"
    >
      Show List
    </strong>
    <form
      class="form-inline"
    >
      <div
        class="c5"
        id="date-field"
      >
        
        <div
          class="c6 c7 c8"
        >
          <input
            class="c9"
            id="date"
            name="startTime"
            placeholder="Date"
            required=""
            type="datetime-local"
          />
        </div>
        
      </div>
      <div
        class="c12"
        id="movie-wrapper"
      >
        <div
          class="c13 c14"
          id="movie-input-wrapper"
        >
          <div
            class="c15"
          >
            <div
              class="c16"
            >
              <input
                aria-describedby="movie-helper-text"
                autocomplete="off"
                class="c17"
                id="movie-input"
                placeholder="Select Movie"
                readonly=""
                type="text"
                value="Select"
              />
              <label
                class="c18 c19"
                for="movie-input"
              />
            </div>
            <svg
              class="c20 c21 c22 c23"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </div>
          
        </div>
      </div>
      <div
        class="c12"
        id="movie-wrapper"
      >
        <div
          class="c13 c14"
          id="movie-input-wrapper"
        >
          <div
            class="c15"
          >
            <div
              class="c16"
            >
              <input
                aria-describedby="movie-helper-text"
                autocomplete="off"
                class="c17"
                id="movie-input"
                placeholder="Select Language"
                readonly=""
                type="text"
                value="Select"
              />
              <label
                class="c18 c19"
                for="movie-input"
              />
            </div>
            <svg
              class="c20 c21 c22 c23"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </div>
          
        </div>
      </div>
      <div
        class="c12"
        id="movie-wrapper"
      >
        <div
          class="c13 c14"
          id="movie-input-wrapper"
        >
          <div
            class="c15"
          >
            <div
              class="c16"
            >
              <input
                aria-describedby="movie-helper-text"
                autocomplete="off"
                class="c17"
                id="movie-input"
                placeholder="Select Type"
                readonly=""
                type="text"
                value="Select"
              />
              <label
                class="c18 c19"
                for="movie-input"
              />
            </div>
            <svg
              class="c20 c21 c22 c23"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </div>
          
        </div>
      </div>
      <div
        class="c5"
        id="price-field"
      >
        
        <div
          class="c6 c7 c8"
        >
          <input
            class="c9"
            id="price"
            name="price"
            placeholder="Enter Price"
            required=""
            type="number"
          />
        </div>
        
      </div>
      <button
        class="c10"
        type="submit"
      >
        <span
          class="c3 c11"
        >
          Add Show
        </span>
      </button>
    </form>
    <table
      class="table"
    >
      <thead
        class="thead-light"
      >
        <tr>
          <th
            scope="col"
          >
            Sr.No
          </th>
          <th
            scope="col"
          >
            Start time
          </th>
          <th
            scope="col"
          >
            Movie
          </th>
          <th
            scope="col"
          >
            Movie Language
          </th>
          <th
            scope="col"
          >
            Movie Type
          </th>
          <th
            scope="col"
          >
            Price
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </main>
</div>
`;
